--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
 
     <head>
@@ -12,8 +13,10 @@
             <strong>{{ boldmessage }} </strong> <br />
         </div>
         <div>
-            <a href="/rango/about/">About</a><br />
+            <a href="/rango/about/">About</a><br /> 
+            <img src="{% static 'images/rango.jpg' %}"
+                alt="Picture of Rango" /> <!-- New line -->
         </div>
     </body>
-    
+
 </html>
